--- a/javascript-basics-01/Step_2.html
+++ b/javascript-basics-01/Step_2.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <script src="step_2.js">
+        <script src="Step_2.js">
 
         </script>
     </body>
