--- a/javascript-basics-01/Step_3.html
+++ b/javascript-basics-01/Step_3.html
@@ -5,5 +5,11 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <div>Whats your name? <input type="text" class="input" name="name" id="input"> </div>
+
+        <button class="input-btn">Answer</button>
+
+
+        <script src="Step_3.js"></script>
     </body>
 </html>
