--- a/javascript-basics-01/Step_4.html
+++ b/javascript-basics-01/Step_4.html
@@ -6,10 +6,14 @@
     </head>
     <body>
         <form>
-            <label for="name">name : </label><input type="text" name="name" id="name"/>
-            <label for="surname">surname : </label><input type="text" name="surname" id="surname"/>
-            <label for="city">city : </label><input type="text" name="city" id="city"/>
+            <label class="firstname" for="name">name : </label><input type="text" name="name" id="name"/>
+            <label class="surname" for="surname">surname : </label><input type="text" name="surname" id="surname"/>
+            <label class="city" for="city">city : </label><input type="text" name="city" id="city"/>
             <button  name="validate" id="validate">Validate</button>
         </form>
+
+        <script src="Step_4.js">
+
+        </script>
     </body>
 </html>
