--- a/javascript-basics-02/step 3/index.html
+++ b/javascript-basics-02/step 3/index.html
@@ -8,5 +8,13 @@
   <form>
     <label for="name">Your name  : </label><input type="text" name="name" value="" id="name"/>
   </form>
+
+  <div class="target">
+
+  </div>
+
+  <script src="Step_3.js">
+
+  </script>
 </body>
 </html>
