--- a/javascript-basics-02/step 5/index.html
+++ b/javascript-basics-02/step 5/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div class="container">
-      <img src="images/image1.jpg" id="image1" />
-      <img src="images/image2.jpg" id="image2" />
-      <img src="images/image3.jpg" id="image3" />
-      <img src="images/image4.jpg" id="image4" />
-      <img src="images/image5.jpg" id="image5" />
+      <img src="images/image1.jpg" id="image1" class="imageAll"/>
+      <img src="images/image2.jpg" id="image2" class="imageAll"/>
+      <img src="images/image3.jpg" id="image3" class="imageAll"/>
+      <img src="images/image4.jpg" id="image4" class="imageAll"/>
+      <img src="images/image5.jpg" id="image5" class="imageAll"/>
     </div>
     <script src="Step_5.js">
 
