--- a/javascript-basics-02/step 6/index.html
+++ b/javascript-basics-02/step 6/index.html
@@ -11,4 +11,7 @@
       <img src="images/image4.jpg" id="image4" />
       <img src="images/image5.jpg" id="image5" />
   </body>
+  <script src="Step_6.js">
+
+  </script>
 </html>
